--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "test": "npm run lint"
   },
   "dependencies": {
+    "stylelint-config-recess-order": "^2.0.0",
     "stylelint-order": "^0.8.1"
   },
   "peerDependencies": {
