Add recommended rules & remove rules covered by external config

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "stylelint-config-recess-order": "^2.0.0",
+    "stylelint-config-recommended": "^2.1.0",
     "stylelint-order": "^0.8.1"
   },
   "peerDependencies": {
