--- a/package.json
+++ b/package.json
@@ -9,37 +9,47 @@
   "scripts": {
     "precommit": "lint-staged && npm test",
     "lint": "npm-run-all lint:*",
-    "lint:markdown": "remark . -qo",
-    "lint:scripts": "prettier-eslint '**/*.js' --write --list-different",
+    "lint:markdown": "remark .",
+    "lint:scripts": "prettier-eslint '**/*.js' --list-different",
+    "semantic-release": "semantic-release",
     "test": "npm run lint"
   },
   "dependencies": {
-    "stylelint-config-recess-order": "^2.0.0",
+    "stylelint-config-recess-order": "^2.0.1",
     "stylelint-config-recommended": "^2.1.0",
-    "stylelint-order": "^0.8.1"
+    "stylelint-order": "^2.0.0"
   },
   "peerDependencies": {
     "stylelint": ">=9"
   },
   "devDependencies": {
-    "@zazen/eslint-config": "^0.2.0",
-    "husky": "^0.14.3",
-    "lint-staged": "~4.3.0",
-    "npm-run-all": "~4.1.2",
-    "remark-cli": "~4.0.0",
-    "remark-contributors": "~3.1.0",
-    "remark-github": "~7.0.2",
-    "remark-preset-lint-markdown-style-guide": "~2.1.1",
-    "remark-toc": "~4.0.1"
+    "@zazen/eslint-config": "^0.3.0",
+    "@zazen/semantic-release": "^0.1.1",
+    "husky": "^1.3.0",
+    "lint-staged": "^8.1.0",
+    "npm-run-all": "^4.1.5",
+    "remark-cli": "^6.0.1",
+    "remark-github": "^7.0.5",
+    "remark-preset-lint-markdown-style-guide": "^2.1.2",
+    "remark-toc": "^5.1.1",
+    "semantic-release": "^15.13.1"
   },
   "keywords": [
     "stylelint-config"
   ],
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
   "lint-staged": {
-    "*.{js|json}": [
-      "prettier-eslint --list-different",
+    "*.js": [
+      "prettier-eslint --write",
       "git add"
     ]
+  },
+  "release": {
+    "extends": "@zazen/semantic-release"
   },
   "remarkConfig": {
     "plugins": [
@@ -52,7 +62,6 @@
         "lint-list-item-spacing",
         false
       ],
-      "contributors",
       "github",
       "toc"
     ],
